uat/pod-sec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  namespace: security
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: nginx-cont
    image: nginx:latest
    command: ["sleep","36000"]
