uat/static-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-nginx
  namespace: vic
  labels:
    app: static-nginx
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: static-nginx
    image: nginx:latest
    command: ["sleep","3600"]
    ports:
    - containerPort: 80
