uat/netpol-2.pol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: for-netpol-2
spec:
  podSelector:
    matchLabels:
      role: mid-role
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: your-app
    ports:
    - port: 80
